new: Array task complete

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,15 @@
 				"<node_internals>/**"
 			],
 			"program": "${workspaceFolder}/app.js"
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "test",
+			"skipFiles": [
+				"<node_internals>/**"
+			],
+			"program": "${workspaceFolder}/app.test.js"
 		}
 	]
 }
